--- a/src/app/items.component.html
+++ b/src/app/items.component.html
@@ -1,5 +1,5 @@
 <div class="center">
-  <div class="item" *ngFor="let item of this.items" (click)="onSelect(item)" [class.selected]="item===this.selection">
+  <div class="item" *ngFor="let item of this.items" (click)="onSelect(item)" [class.selected]="item===this.selected_item">
     <p class="name">{{item.url}}</p>
   </div>
 </div>
