Implemented pulling documents, and doing it onClick

--- a/src/app/docs.component.html
+++ b/src/app/docs.component.html
@@ -1,5 +1,5 @@
 <div class="center">
   <div class="doc" *ngFor="let doc of this.docs" (click)="onSelect(doc)">
-    <p class="name">{{doc.url}}</p>
+    <p class="name">{{doc['http://purl.org/dc/terms/identifier']}}</p>
   </div>
 </div>
