--- a/src/app/items.component.html
+++ b/src/app/items.component.html
@@ -1,4 +1,5 @@
 <div class="center">
+  Items in list
   <div class="item" *ngFor="let item of this.items" (click)="onSelect(item)" [class.selected]="item===this.selected_item">
     <p class="name">{{item.url}}</p>
   </div>
