--- a/src/app/oauth2.component.html
+++ b/src/app/oauth2.component.html
@@ -1,2 +1,9 @@
-<p id="welcome-text">Welcome to the Alveo Transcription Tool. You're just one step away from being able to begin transcribing!</p>
-<span class="center"><p class="button" (click)="this.actionLogin()">Login via Alveo</p></span>
+<div class="center">
+  <div id="subheader">Welcome</div>
+
+  <p class="welcome-text">This is the Alveo Transcription Tool, a web-based annotation tool. Before you begin, you require some data. In order to do so, it is best to register an Alveo account <a href="http://alveo.edu.au/">here</a>.</p>
+
+  <p class="welcome-text">Already have an account? Then you're just one step away!</p>
+
+  <p class="button" (click)="this.actionLogin()">Login via Alveo</p>
+</div>
