--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav></nav>
-<header><p>Alveo Transcription Tool</p></header>
+<h1 class="center"><p>Alveo Transcription Tool</p></h1>
 <div class="flex">
 <router-outlet></router-outlet>
 </div>
