--- a/src/app/oauth2.component.html
+++ b/src/app/oauth2.component.html
@@ -1,9 +1,7 @@
 <div class="center">
-  <div id="subheader">Welcome</div>
+  <p class="info-text">Welcome. This is the Alveo Transcription Tool, a web-based annotation tool. Before you begin, you require some data. In order to get some, it is best to register an Alveo account <a href="http://alveo.edu.au/">here</a>.</p>
 
-  <p class="welcome-text">This is the Alveo Transcription Tool, a web-based annotation tool. Before you begin, you require some data. In order to do so, it is best to register an Alveo account <a href="http://alveo.edu.au/">here</a>.</p>
+  <p class="info-text bottom-spacer">Already have an account? Then you're just one step away!</p>
 
-  <p class="welcome-text">Already have an account? Then you're just one step away!</p>
-
-  <p class="button" (click)="this.actionLogin()">Login via Alveo</p>
+  <p class="button medium" (click)="this.actionLogin()">Login via Alveo</p>
 </div>
