--- a/src/app/itemlists.component.css
+++ b/src/app/itemlists.component.css
@@ -1,6 +1,13 @@
-#subheader {
-  padding: 1em 0 0.3em 0;
-  font-size: 34px;
+h2 {
+  padding: 0.3em 0 0.2em 0;
+}
+
+#controls {
+  background: #EEEEEE;
+  border: 1px solid #555555;
+  width: 540px;
+  margin: auto;
+  padding: 1em;
 }
 
 .bodytext, .count {
