--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,17 @@ body {
   border: 3px solid #00AAFF;
 }
 
+.small {
+  font-size: 16px;
+  padding: 0.4em;
+  margin: 0.15em;
+}
+
+.medium {
+  font-size: 24px;
+  padding: 0.5em 2.4em 0.5em 2.4em;
+}
+
 .button:hover {
   background: #444444;
   cursor: pointer;
@@ -48,3 +59,26 @@ body {
   display: block;
 }
 
+.inline-splitter {
+  display: block;
+}
+
+h1 {
+  margin: 0.6em 0 0.6em 0;
+  font-size: 60px;
+}
+
+h2 {
+  padding: 0 0 0.3em 0;
+  font-size: 34px;
+}
+
+.info-text {
+  font-size: 24px;
+  width: 75%;
+  margin: 0.5em auto 0 auto;
+}
+
+.bottom-spacer {
+  margin-bottom: 1em;
+}
