--- a/src/app/annotator.component.html
+++ b/src/app/annotator.component.html
@@ -5,8 +5,7 @@
       <p id="return-button" (click)="actionBack()" >Save &amp; Return</p>
     </div>
 
-    <player [clip]="getClip()"
-            [audioData]="getAudioData()"></player>
+    <player [clip]="getClip()"></player>
   </div>
 </div>
 
