--- a/src/app/dataview.component.html
+++ b/src/app/dataview.component.html
@@ -2,9 +2,9 @@
 <div id="subheader">Viewing "{{this.getListName()}}" list</div>
 <div id="divider">
   <div id="left">
-    <items [items]="getItems()" (onSelection)="onItemSelection($event)"></items>
+    <items [items]="this.getItems()" (onSelection)="onItemSelection($event)"></items>
   </div>
   <div id="right">
-    <docs [docs]="getDocs()"></docs>
+    <docs [docs]="this.getDocs()"></docs>
   </div>
 </div>
