--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,4 @@
 <div class="flex">
 <router-outlet></router-outlet>
 </div>
-<footer><p>Site &copy; {{ this.year }} COMPANY all rights reserved</p></footer>
+<!--<footer><p>Site &copy; {{ this.year }} COMPANY all rights reserved</p></footer>-->
