DocsComponent now emits events instead of handling them
Simplified DocsComponent

--- a/src/app/alveo/listview/listview.component.html
+++ b/src/app/alveo/listview/listview.component.html
@@ -5,6 +5,6 @@
     <items [items]="this.getItems()" (onSelection)="onItemSelection($event)"></items>
   </div>
   <div id="right">
-    <docs [docs]="this.getDocs()"></docs>
+    <docs [docs]="this.getDocs()" (onSelection)="onDocSelection($event)"></docs>
   </div>
 </div>
