Made clearer distinction that the data controls are part of the debugging console

--- a/src/app/alveo/itemlists/itemlists.component.html
+++ b/src/app/alveo/itemlists/itemlists.component.html
@@ -12,6 +12,7 @@
 <div *ngIf="this.listSize() > 0">
   <div class="center">
     <div id="controls">
+      <h3>- Debugging Console -</h3><br>
       <p>Data Controls</p>
       <p class="button small" (click)="this.pullData()">Refresh Data via Alveo</p>
       <span class="inline-splitter"></span>
