--- a/src/app/alveo/listview/items/items.component.html
+++ b/src/app/alveo/listview/items/items.component.html
@@ -2,7 +2,7 @@
   Items in list
   <div *ngIf="this.getData() != null">
     <div *ngIf="this.getData().length == 0">
-      /* It is normally assumed that a list can't be empty but the safeguard exists should that change later. */
+      <!-- It is normally assumed that a list can't be empty but the safeguard exists should that change later. -->
       <p><strong>This item list is empty.</strong></p>
     </div><div *ngIf="this.getData().length > 0">
       <div class="item" *ngFor="let item of this.items" (click)="onSelect(item)" [class.selected]="item===this.selected_item">
@@ -10,7 +10,7 @@
       </div>
     </div>
   </div><div *ngIf="this.getData() == null">
-    /* Through the application workflow, it is assumed this component shouldn't even be activated if there is no data. It is a safeguard in the event it is being downloaded. */
+    <!-- Through the application workflow, it is assumed this component shouldn't even be activated if there is no data. It is a safeguard in the event it is being downloaded. -->
     <p><strong>Data currently unavailable.</strong></p>
   </div>
 </div>
