--- a/src/app/alveo/listview/docs/docs.component.html
+++ b/src/app/alveo/listview/docs/docs.component.html
@@ -1,14 +1,24 @@
 <div class="center">
-  <div *ngIf="this.getDocs() == null">
-    <p><strong>Please select an item.</strong></p>
-  </div> <div *ngIf="this.getDocs() != null">
-    <div *ngIf="this.getDocs().length == 0">
-      <p>No audio documents were found in this item.</p>
-    </div><div *ngIf="this.getDocs().length > 0">
-      <p>Audio documents in selected list</p>
-      <div class="doc" *ngFor="let doc of this.getDocs()" (click)="onSelect(doc)">
-        <p class="name">{{doc['alveo:url']}}</p>
-      </div>
+  <ng-template #dataDownloadTemplate [ngIf]="this.isDownloadingData()" [ngIfElse]="selectionWaitTemplate">
+    <p>Downloading data ...</p>
+  </ng-template>
+
+  <ng-template #selectionWaitTemplate>
+    <div *ngIf="this.getDocs() == null; else audioCheckTemplate">
+      <p>Please select an item.</p>
     </div>
-  </div>
+  </ng-template>
+
+  <ng-template #audioCheckTemplate>
+    <div *ngIf="this.getDocs().length == 0; else audioDisplayTemplate">
+      <p>No audio documents were found in this item.</p>
+    </div>
+  </ng-template>
+
+  <ng-template #audioDisplayTemplate>
+    <p>Audio documents in selected list</p>
+    <div class="doc" *ngFor="let doc of this.getDocs()" (click)="onSelect(doc)">
+      <p class="name">{{doc['alveo:url']}}</p>
+    </div>
+  </ng-template>
 </div>
