--- a/src/app/alveo/itemlists/itemlists.component.html
+++ b/src/app/alveo/itemlists/itemlists.component.html
@@ -7,22 +7,16 @@
     <ng-template #loggedInTemplate [ngIf]="this.isLoggedIn()">
       <div *ngIf="this.isLoggedIn()" class="center">
         <p class="info-text bottom-spacer">Great! You're all logged in. Now you need to choose a source of data to load. Right now, there is only the Alveo provider. Click it to begin.</p>
-        <p class="button" (click)="this.pullData()">Download Alveo Data</p>
+        <p class="button" (click)="this.getData()">Download Alveo Data</p>
       </div>
     </ng-template>
   </ng-template>
 
   <ng-template #populatedListTemplate>
     <div class="center">
-      <div id="controls">
-        <h3>- Debugging Console -</h3><br>
-        <p>Data Controls</p>
-        <p class="button small" (click)="this.pullData()">Refresh Data via Alveo</p>
-        <span class="inline-splitter"></span>
-        <p class="button small" (click)="this.storeData()">Store Data</p>
-        <p class="button small" (click)="this.reset()">Purge Loaded Data</p>
-        <p class="button small" (click)="this.resetStore()">Purge All Data</p>
-      </div>
+      <ng-template #devconsoleTemplate [ngIf]="this.isDevMode()">
+        <devconsole></devconsole>
+      </ng-template>
 
       <h2>Your item lists</h2>
       <div class="list" *ngFor="let list of this.getLists()" (click)="onSelect(list)">
