Began material design integration

--- a/src/app/alveo/auth/auth.component.html
+++ b/src/app/alveo/auth/auth.component.html
@@ -1,7 +1,7 @@
 <div class="center">
-  <p class="info-text">Welcome. This is the Alveo Transcription Tool, a web-based annotation tool. Before you begin, you require some data. In order to get some, it is best to register an Alveo account <a href="http://alveo.edu.au/">here</a>.</p>
+  <h2 class="mat-h2">Welcome. This is the Alveo Transcription Tool, a web-based annotation tool. Before you begin, you require some data. In order to get some, it is best to register an Alveo account <a href="http://alveo.edu.au/">here</a>.</h2>
 
-  <p class="info-text bottom-spacer">Already have an account? Then you're just one step away!</p>
+  <h2 class="mat-h2">Already have an account? Then you're just one step away!</h2>
 
-  <p class="button medium" (click)="this.actionLogin()">Login via Alveo</p>
+  <button md-raised-button id="login-button" color="primary" (click)="this.actionLogin()">Login via Alveo</button>
 </div>
