--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,700,300italic,700italic|Oswald:700);
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 *, *:before, *:after { 
   box-sizing: inherit;
@@ -28,16 +29,6 @@ body {
   padding: 0.2em 0 0.2em 0;
 }
 
-.button {
-  font-size: 20px;
-  display: inline-block; /* Width fix */
-  background: #555555;
-  color: #FFFFFF;
-  padding: 0.5em;
-  margin: 0.2em;
-  border: 3px solid #00AAFF;
-}
-
 .small {
   font-size: 16px;
   padding: 0.4em;
@@ -49,11 +40,6 @@ body {
   padding: 0.5em 2.4em 0.5em 2.4em;
 }
 
-.button:hover {
-  background: #444444;
-  cursor: pointer;
-}
-
 .center {
   text-align: center;
   display: block;
@@ -61,6 +47,7 @@ body {
 
 .inline-splitter {
   display: block;
+  margin-top: 0.5em;
 }
 
 h1 {
