--- a/src/app/alveo/auth/auth.component.css
+++ b/src/app/alveo/auth/auth.component.css
@@ -1,3 +1,38 @@
+#overlay {
+  z-index: 10;
+
+  position: absolute;
+  background: rgba(0, 0, 0, 0.5);
+
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.fixed {
+  position: fixed;
+  top: 10%;
+  right: 0;
+  bottom: 0;
+  left: 0; 
+}
+
+#dialogue {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  width: 80%;
+  margin: auto;
+
+  padding: 1.5em;
+
+  background: #f9f9f9;
+  border: 0.1625em solid #d4d4d4;
+}
+
 #login-button {
   font-size: 2em;
   padding: 0.3em 0.6em 0.3em 0.6em;
