--- a/src/app/alveo/itemlists/itemlists.component.html
+++ b/src/app/alveo/itemlists/itemlists.component.html
@@ -19,7 +19,7 @@
 
       <h2>Your item lists</h2>
 
-      <listtable [tableData]="this.getLists()"></listtable>
+      <listtable [tableData]="this.getLists()" (onSelection)="onSelection($event)"></listtable>
     </div>
   </ng-template>
 </ng-template>
