--- a/src/app/alveo/itemlists/listtable/listtable.component.html
+++ b/src/app/alveo/itemlists/listtable/listtable.component.html
@@ -7,13 +7,13 @@
     <!-- ID Column -->
     <ng-container mdColumnDef="listName">
       <md-header-cell *mdHeaderCellDef> Item List Name </md-header-cell>
-      <md-cell *mdCellDef="let row"> {{row.listName}} </md-cell>
+      <md-cell *mdCellDef="let row"> {{row.name}} </md-cell>
     </ng-container>
 
     <!-- Progress Column -->
     <ng-container mdColumnDef="items">
       <md-header-cell *mdHeaderCellDef> Items </md-header-cell>
-      <md-cell *mdCellDef="let row"> {{row.items}} </md-cell>
+      <md-cell *mdCellDef="let row"> {{row.num_items}} </md-cell>
     </ng-container>
 
     <!-- Name Column -->
@@ -23,7 +23,7 @@
     </ng-container>
 
     <md-header-row *mdHeaderRowDef="displayedColumns"></md-header-row>
-    <md-row *mdRowDef="let row; columns: displayedColumns;"></md-row>
+    <md-row (click)="this.onSelect(row)" *mdRowDef="let row; columns: displayedColumns;"></md-row>
   </md-table>
 
   <md-paginator #paginator
