Added mouse hover effect for table rows

--- a/src/app/alveo/itemlists/listtable/listtable.component.html
+++ b/src/app/alveo/itemlists/listtable/listtable.component.html
@@ -23,7 +23,7 @@
     </ng-container>
 
     <md-header-row *mdHeaderRowDef="displayedColumns"></md-header-row>
-    <md-row (click)="this.onSelect(row)" *mdRowDef="let row; columns: displayedColumns;"></md-row>
+    <md-row class="clickable" (click)="this.onSelect(row)" *mdRowDef="let row; columns: displayedColumns;"></md-row>
   </md-table>
 
   <md-paginator #paginator
