--- a/src/app/alveo/devconsole/devconsole.component.html
+++ b/src/app/alveo/devconsole/devconsole.component.html
@@ -2,9 +2,9 @@
   <h3>- Debugging Console -</h3><br>
   <p>Data Controls</p>
 
-  <button md-raised-button color="primary" (click)="this.getData()">Refresh data via Alveo</button>
+  <button mat-raised-button color="primary" (click)="this.getData()">Refresh data via Alveo</button>
   <span class="inline-splitter"></span>
-  <button md-raised-button color="primary" (click)="this.storeData()">Store Data</button>
-  <button md-raised-button color="primary" (click)="this.reset()">Purge Loaded Data</button>
-  <button md-raised-button color="primary" class="btn-large" (click)="this.resetStore()">Purge All Data</button>
+  <button mat-raised-button color="primary" (click)="this.storeData()">Store Data</button>
+  <button mat-raised-button color="primary" (click)="this.reset()">Purge Loaded Data</button>
+  <button mat-raised-button color="primary" class="btn-large" (click)="this.resetStore()">Purge All Data</button>
 </div>
