--- a/src/app/alveo/itemlists/listtable/listtable.component.html
+++ b/src/app/alveo/itemlists/listtable/listtable.component.html
@@ -1,35 +1,35 @@
 <div class="example-container mat-elevation-z8">
-  <md-table #table [dataSource]="dataSource">
+  <mat-table #table [dataSource]="dataSource">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
 
     <!-- ID Column -->
-    <ng-container mdColumnDef="listName">
-      <md-header-cell *mdHeaderCellDef> Item List Name </md-header-cell>
-      <md-cell *mdCellDef="let row"> {{row.name}} </md-cell>
+    <ng-container matColumnDef="listName">
+      <mat-header-cell *matHeaderCellDef> Item List Name </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
     </ng-container>
 
     <!-- Progress Column -->
-    <ng-container mdColumnDef="items">
-      <md-header-cell *mdHeaderCellDef> Items </md-header-cell>
-      <md-cell *mdCellDef="let row"> {{row.num_items}} </md-cell>
+    <ng-container matColumnDef="items">
+      <mat-header-cell *matHeaderCellDef> Items </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.num_items}} </mat-cell>
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container mdColumnDef="shared">
-      <md-header-cell *mdHeaderCellDef> Shared </md-header-cell>
-      <md-cell *mdCellDef="let row"> {{row.shared}} </md-cell>
+    <ng-container matColumnDef="shared">
+      <mat-header-cell *matHeaderCellDef> Shared </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.shared}} </mat-cell>
     </ng-container>
 
-    <md-header-row *mdHeaderRowDef="displayedColumns"></md-header-row>
-    <md-row class="clickable" (click)="this.onSelect(row)" *mdRowDef="let row; columns: displayedColumns;"></md-row>
-  </md-table>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row class="clickable" (click)="this.onSelect(row)" *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
 
-  <md-paginator #paginator
+  <mat-paginator #paginator
                 [length]="this.tableData.length"
                 [pageIndex]="0"
                 [pageSize]="25"
                 [pageSizeOptions]="[5, 10, 25, 100]">
-  </md-paginator>
+  </mat-paginator>
 </div>
