--- a/src/app/alveo/auth/auth.component.css
+++ b/src/app/alveo/auth/auth.component.css
@@ -11,14 +11,12 @@
 }
 
 .fixed {
-  position: fixed;
-  top: 10%;
-  right: 0;
-  bottom: 0;
-  left: 0; 
+  display: flex;
+  height: 100%;
 }
 
 #dialogue {
+  flex: 1 1 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,6 +24,8 @@
 
   width: 80%;
   margin: auto;
+
+  max-width: 50em;
 
   padding: 1.5em;
 
