--- a/src/app/alveo/itemlists/itemlists.component.css
+++ b/src/app/alveo/itemlists/itemlists.component.css
@@ -2,6 +2,19 @@ h2 {
   padding: 0.3em 0 0.2em 0;
 }
 
+#data-information {
+  display: flex;
+  height: 100%;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.info-text {
+  padding-bottom: 1em;
+  max-width: 35em;
+}
+
 .bodytext, .count {
   display: inline-block;
 }
