--- a/src/app/alveo/itemlists/listtable/listtable.component.html
+++ b/src/app/alveo/itemlists/listtable/listtable.component.html
@@ -1,4 +1,4 @@
-<div class="example-container mat-elevation-z8">
+<div id="conftable" class="mat-elevation-z8">
   <mat-table #table [dataSource]="dataSource">
 
     <!--- Note that these columns can be defined in any order.
