--- a/src/app/alveo/listview/listview.component.html
+++ b/src/app/alveo/listview/listview.component.html
@@ -1,4 +1,4 @@
-<span class="center"><p class="button" (click)="actionBack()">Back to index</p></span>
+<span class="center"><p class="button" (click)="actionBack()">Back to Item Lists</p></span>
 <div id="subheader">Viewing "{{this.getListName()}}" list</div>
 <div id="divider">
   <div id="left">
