--- a/src/app/alveo/listview/items/items.component.html
+++ b/src/app/alveo/listview/items/items.component.html
@@ -1,25 +1,23 @@
-<div class="center">
-  <ng-template #dataDownloadTemplate [ngIf]="this.getData() == null" [ngIfElse]="listEmptyCheckTemplate">
-    <!-- Through the application workflow, it is assumed this component shouldn't even be activated if there is no data. It is a safeguard in the event it is being downloaded. -->
-    <p>Item list data is currently unavailable.</p>
-  </ng-template>
+<ng-template #dataDownloadTemplate [ngIf]="this.getData() == null" [ngIfElse]="listEmptyCheckTemplate">
+  <!-- Through the application workflow, it is assumed this component shouldn't even be activated if there is no data. It is a safeguard in the event it is being downloaded. -->
+  <p class="center">Item list data is currently unavailable.</p>
+</ng-template>
 
-  <ng-template #listEmptyCheckTemplate>
-    <div *ngIf="this.getData().length == 0; else listDisplayTemplate">
-      <!-- It is normally assumed that a list can't be empty but the safeguard exists should that change later. -->
-      <p>This item list is empty.</p>
+<ng-template #listEmptyCheckTemplate>
+  <div *ngIf="this.getData().length == 0; else listDisplayTemplate">
+    <!-- It is normally assumed that a list can't be empty but the safeguard exists should that change later. -->
+    <p class="center">This item list is empty.</p>
+  </div>
+</ng-template>
+
+
+<ng-template #listDisplayTemplate>
+<p class="center">Items in list</p>
+  <div *ngIf="this.getData().length > 0">
+    <div class="item" *ngFor="let item of this.items"
+                      (click)="onSelect(item)"
+                      [class.selected]="item===this.selected_item">
+      <p class="name">{{this.shorten(item.url)}}</p>
     </div>
-  </ng-template>
-
-
-  <ng-template #listDisplayTemplate>
-  <p>Items in list</p>
-    <div *ngIf="this.getData().length > 0">
-      <div class="item" *ngFor="let item of this.items"
-                        (click)="onSelect(item)"
-                        [class.selected]="item===this.selected_item">
-        <p class="name">{{this.shorten(item.url)}}</p>
-      </div>
-    </div>
-  </ng-template>
-</div>
+  </div>
+</ng-template>
