--- a/src/app/alveo/listview/listview.component.html
+++ b/src/app/alveo/listview/listview.component.html
@@ -1,5 +1,8 @@
-<span class="center"><p class="button" (click)="actionBack()">Back to Item Lists</p></span>
-<div id="subheader">Viewing "{{this.getListName()}}" list</div>
+<div class="center">
+<button mat-raised-button id="back-button" color="primary" (click)="this.actionBack()">Back to Item Lists</button>
+</div>
+
+<div id="subheader">Viewing "{{this.getListName()}}" item list</div>
 <div id="divider">
   <div id="left">
     <items [items]="this.getItems()" (onSelection)="onItemSelection($event)"></items>
