--- a/src/app/alveo/auth/auth.component.html
+++ b/src/app/alveo/auth/auth.component.html
@@ -1,13 +1,9 @@
-<div id="overlay">
-  <div class="fixed">
-    <div id="dialogue">
-      <h1 class="mat-h1 center">Authentication Required</h1>
+<h1 id="title" mat-dialog-title>Authentication required</h1>
+<div id="dialog" mat-dialog-content>
       <div *ngIf="this.isFirstRun(); then authRequiredFirstRun else authRequired"> </div>
       <div class="center">
         <button mat-raised-button id="login-button" color="primary" (click)="this.actionLogin()">Login via Alveo</button>
       </div>
-    </div>
-  </div>
 </div>
 
 <ng-template #authRequiredFirstRun>
