--- a/src/app/alveo/listview/listview.component.html
+++ b/src/app/alveo/listview/listview.component.html
@@ -29,7 +29,7 @@
         </mat-panel-description>
       </mat-expansion-panel-header>
 
-      <div *ngIf="alveoService.getItemStatus(item) == 'Cached'">
+      <div *ngIf="alveoService.getItemStatus(item).startsWith('Cached')">
         <docs [docs]="this.getDocs(item)" (onSelection)="onDocSelection($event, item)"></docs>
       </div>
     </mat-expansion-panel>
