--- a/src/app/alveo/nav/nav.component.html
+++ b/src/app/alveo/nav/nav.component.html
@@ -1,3 +1,3 @@
 <a *ngIf="this.queryLoggedIn()" (click)="this.actionLogout()" href="javascript:void(0)">Logout</a>
 <a href="http://alveo.edu.au/" target="_blank">Alveo</a>
-<a href="#about">About</a>
+<a href="https://github.com/Alveo/alveo-transcriber">GitHub</a>
