Dash selector as per style guide

--- a/src/app/alveo/itemlists/itemlists.component.html
+++ b/src/app/alveo/itemlists/itemlists.component.html
@@ -13,8 +13,8 @@
 
   <ng-template #populatedListTemplate>
     <div class="center">
-      <ng-template #devconsoleTemplate [ngIf]="this.isDevMode()">
-        <devconsole></devconsole>
+      <ng-template #devConsoleTemplate [ngIf]="this.isDevMode()">
+        <dev-console></dev-console>
       </ng-template>
 
       <h2>Your item lists</h2>
