--- a/src/app/alveo/itemlists/itemlists.component.html
+++ b/src/app/alveo/itemlists/itemlists.component.html
@@ -6,7 +6,7 @@
     <ng-template #loggedInTemplate [ngIf]="this.isLoggedIn()">
       <div id="data-information" class="center">
         <p class="info-text bottom-spacer">Great! You're all logged in. Now you need to choose a source of data to load. Right now, there is only the Alveo provider. Click it to begin.</p>
-        <button mat-raised-button color="primary" id="download-button" (click)="this.getData()">Download Alveo Data</button>
+        <button mat-raised-button color="primary" id="download-button" (click)="this.downloadData()">Download Alveo Data</button>
       </div>
     </ng-template>
   </ng-template>
